# iMolpro

./: .gitignore  BasisSelector.py  CheckableComboBox.py  Chooser.py  Defbas_test.py  Dockerfile  ENV  EditFile_test.py  INSTALL  JSmol.min.js  MenuBar.py  Molpro.py  OldOutputMenu.py  OptionsDialog.py  Package-README.md  Package-license.md  ProjectWindow.py  QtMolpro.py  README.md  RecentMenu.py  RunDirectoryMenu.py  SpinComboBox.py  WindowManager.py  _version.py  backend.py  build.ps1  build.sh  construct.yaml  database.py  defbas.py  embed_html5.py  help.py  https_try.py  https_try.sh  iMolpro.nsi  iMolpro.py  malo.molden  molpro.icns  molpro_input.json  molpro_input.py  (+12 more)
.github/workflows/: clean-releases.yml  deploy.yml  tag-latest.yml
doc/: INSTALL_macOS_binary.md  backends.md  display.md  example.md  runs.md
j2s/J/: Jmol.properties
j2s/J/modelkit/: ModelKit.js
j2s/JM/: AtomCollection.js  Minimizer.js  ModelSet.js
j2s/JS/: CmdExt.js  MathExt.js  SV.js  ScriptError.js  ScriptEval.js  ScriptExpr.js  ScriptManager.js  ScriptParam.js  SmilesGenerator.js  SmilesMatcher.js  SmilesSearch.js
j2s/JU/: ModulationSet.js
j2s/JV/: FileManager.js  JC.js  Viewer.js
j2s/core/: corebio.js  corejmol.js  corejmol.z.js  corejmoldebug.js  corejmoljsv.js  corejmoljsv.z.js  corejsv.js  corejsv.z.js  coremin.js  coremin.z.js  corescript.js  corescript.z.js  corescriptcmd.js  corescriptcmd.z.js  corescriptmath.js  corescriptmath.z.js  coresmiles.js
malonaldehyde.molpro/: .Info.plist.writing_object  Info.plist  malonaldehyde.inp  malonaldehyde.xyz
src/: _version.py
(+12 files in other folders)
