[project]
name = "Molpro"
version = "2023.0.0"
description = "Front end for molpro"

[build-system]
requires = ["setuptools >= 61.0.0", "versioneer[toml]==0.29"]
build-backend = "setuptools.build_meta"

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "src/_version.py"
versionfile_build = "_version.py"
tag_prefix = ""
parentdir_prefix = "Molpro-"
